# backend-fastapi

./: .gitignore  docker-compose.yml
fastapi-project/: .env  Dockerfile  alembic.ini  pyproject.toml
fastapi-project/app/: main.py
fastapi-project/app/auth/: api.py  authentication.py  crud.py  dependencies.py  examples.py  jwt.py  models.py  schemas.py
fastapi-project/app/auth/transport/: __init__.py  cookie.py
fastapi-project/app/cache/: __init__.py  client_redis.py
fastapi-project/app/core/: __init__.py  config.py  db.py  error_messages.py
fastapi-project/app/heroes/: api.py  crud.py  models.py
fastapi-project/app/router/api_v1/: endpoints.py
fastapi-project/migrations/: env.py
fastapi-project/migrations/versions/: 18b072034668_auth.py  57ba8d1a6eb5_heroes.py  76f917adea14_heroes3.py  8d29af36331a_heroes2.py  ce3c99c6dded_heroes4.py
